--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	A PROPOS
 	</h1>
 	<p>
-	Je m'appelle Mélody et je suis étudiante en Master Marketing Digital et Innovation au sein de l'IESEG School of Management à Paris. Je suis actuellement en alternance au sein de l'entreprise KOS PARIS, en tant que Chef de Projets Marketing Digital!
+	Je m'appelle Mélody et je suis étudiante en Master Marketing Digital et Innovation à l'IESEG School of Management à Paris. Je suis actuellement en alternance au sein de l'entreprise KOS PARIS, en tant que Chef de Projets Marketing Digital!
 	</p>
 	<a href="https://www.ieseg.fr" target="_blank"" class="btn-green">En savoir plus</a>
 </div>
@@ -42,10 +42,10 @@
 <div class="card">
 	<img src="images/makeup.png" alt="Maquillage" class="banner-card">
 	<h2>
-	Cosmétiques adict 
+	Cosmétique addict 
 	</h2>
 	<p>
-	Depuis maintenant quelques mois, je travaille dans une entreprise de soins naturels haut de gamme. Je m'épanouie dans un monde où règne la passion et l’innovation, celui de la cosmétique. 
+	Depuis maintenant quelques mois, je travaille dans une entreprise de soins naturels haut de gamme. Je m'épanouis dans un monde où règne la passion et l’innovation, celui de la cosmétique. 
 	</p>
 </div>
 
