--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<p>
 	Je m'appelle Mélody et je suis étudiante en Master Marketing Digital et Innovation à l'IESEG School of Management à Paris. Je suis actuellement en alternance au sein de l'entreprise KOS PARIS, en tant que Chef de Projets Marketing Digital!
 	</p>
-	<a href="https://www.ieseg.fr" target="_blank"" class="btn-green">En savoir plus</a>
+	<a href="https://melodytmski.github.io/Projet2/" target="_blank"" class="btn-green">Découvrir</a>
 </div>
 
 
